--- a/style.css
+++ b/style.css
@@ -90,8 +90,12 @@ html { font-family: 'Roboto', sans-serif; font-size: 100%; color: #211A1D;}
 h1 { border-bottom: 1px solid black; margin-bottom: 2rem; padding-bottom: 1rem; }
 h2 { border-bottom: 0.125rem solid black; margin-bottom: 1rem; padding-bottom: 0.5rem; }
 p {	text-align: justify; line-height: 1.4rem;}
-a { color: #347dbd; font-family: 'Roboto Medium', sans-serif;}
-a:hover { color: #FC814A; font-family: 'Roboto Medium', sans-serif;}
+a { color: #347dbd; 
+/* ALT text-decoration: none; font-family: 'Roboto Medium', sans-serif; */
+}
+a:hover { color: #FC814A;
+/* ALT font-family: 'Roboto Medium', sans-serif; */
+}
 
 .table-of-contents a, .table-of-contents a:hover {
 	font-family: 'Roboto', sans-serif; 
