--- a/style.css
+++ b/style.css
@@ -131,6 +131,7 @@ pre {
 	font-size: smaller;
 	white-space: pre-wrap;
 }
+code { padding-bottom: 1rem; }
 
 figure {
 	margin-block-start: 2rem; margin-block-end: 2rem;
