--- a/style.css
+++ b/style.css
@@ -157,7 +157,7 @@ prevent the automatic page break on every h2 tag. For
 example, we do not want the first h2 tag after the TOC 
 to cause a page break */
 h2 { string-set: section content(text);	}
-h2:not(.top) { margin-top: 2rem; }
+h2:not(.no-break) { break-before: page; }
 
 h3 { string-set: subsection content(text);
 	margin-block-end: 0.5rem;}
