--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ pre {
 	font-size: smaller;
 	white-space: pre-wrap;
 }
-code { padding-bottom: 1rem; display: block;}
+code { margin-bottom: 1.5rem; display: block;}
 
 figure {
 	margin-block-start: 2rem; margin-block-end: 2rem;
