--- a/style.css
+++ b/style.css
@@ -98,6 +98,7 @@ h3 { margin-block-end: 0.5rem; }
 /* 3.2 Page Breaks */
 .page-break { break-after: page; }
 h2:not(.no-break) { break-before: page; }
+h2 .no-break {margin-top: 2rem;}
 
 /* 3.3 Page Numbers */
 @page { @bottom-right { content: counter(page); } }
