--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ a { color: #347dbd; }
 a:hover { color: #FC814A; }
 mark { color: #F78E69; background-color: inherit;
 	font-family: 'Custom Mono', monospace; font-weight: bold; }
-light-mark { font-family: 'Custom Mono', monospace; }
+light-mark { color: brown; }
 img { max-width: 100%; }
 .img-100mm { max-height: 100mm; }
 
