--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ mark { color: #F78E69; background-color: inherit;
 	font-family: 'Custom Mono', monospace; font-weight: bold; }
 light-mark { color: brown; }
 img { max-width: 100%; }
-.img-100mm { max-height: 100mm; text-align: center;}
+.img-100mm { width: 100mm; height: 100mm; text-align: center;}
 
 pre {
 	background-color: #f0f0f0;
