--- a/style.css
+++ b/style.css
@@ -80,6 +80,7 @@ code { margin-bottom: 1.5rem; display: block;}
 figure {
 	margin-block-start: 2rem; margin-block-end: 2rem;
 	margin-inline-start: 0rem; margin-inline-end: 0rem;
+	border: 1px solid black;
 }
 figcaption { caption-side: top; font-size: smaller;
 	font-family: 'Custom Mono', monospace; font-weight: bold;
