--- a/style.css
+++ b/style.css
@@ -76,13 +76,11 @@ pre {
 	white-space: pre-wrap;
 }
 code { margin-bottom: 1.5rem; display: block;}
-figure code { margin-bottom: 0; }
 figure {
 	margin-block-start: 2rem; margin-block-end: 2rem;
 	margin-inline-start: 0rem; margin-inline-end: 0rem;
-	border: 0.25px solid black; padding: 1.5rem;
 }
-figcaption { caption-side: top; padding-bottom: 0.5rem; } 
+figcaption { caption-side: top; padding-bottom: 0.75rem; font-style: italic;} 
 
 /* Personal note: #347dbd & #445a75 for blue and dark blue colors */
 
