--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ a { color: #347dbd; }
 a:hover { color: #FC814A; }
 mark { color: #F78E69; background-color: inherit;
 	font-family: 'Custom Mono', monospace; font-weight: bold; }
-light-mark { color: brown; }
+light-mark { color: #b45f06; }
 img { max-width: 100%; }
 .img-75mm { height: 75mm; margin: 0 auto;}
 
