--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ figcaption { caption-side: top; padding-bottom: 0.75rem;
 
 /* Personal note: #347dbd & #445a75 for blue and dark blue colors */
 
-h3 { margin-block-end: 0.5rem; }
+h3:not(.top) { margin-block-end: 0.5rem; margin-top: 2rem; }
 
 
 
