--- a/style.css
+++ b/style.css
@@ -65,8 +65,8 @@ a:hover { color: #FC814A; }
 mark { color: #F78E69; background-color: inherit;
 	font-family: 'Custom Mono', monospace; font-weight: bold; }
 light-mark { color: #b45f06; }
-img { max-width: 100%; }
-.img-75mm { height: 75mm; margin: 0 auto;}
+img { max-width: calc(100% - 3rem); border: 0.5px solid gray; padding: 1.5rem; }
+.img-75mm { height: 75mm; }
 
 pre {
 	background-color: #f0f0f0;
