--- a/style.css
+++ b/style.css
@@ -62,8 +62,8 @@ h2 { border-bottom: 0.125rem solid black; margin-bottom: 1rem; padding-bottom: 0
 p {	text-align: justify; line-height: 1.4rem; }
 a { color: #347dbd; }
 a:hover { color: #FC814A; }
-mark { color: #445a75; background-color: inherit; }
-light-mark { color: #445a75; }
+mark { color: blue; background-color: inherit; }
+light-mark { color: blue; }
 img { max-width: calc(100% - 3rem); }
 .img-75mm { height: 75mm; }
 
@@ -87,7 +87,7 @@ figcaption { caption-side: top; padding-bottom: 0.75rem;
 
 /* Personal note: #347dbd & #445a75 for blue and dark blue colors */
 
-h3:not(.top) { margin-block-end: 0.5rem; margin-block-start: 2.5rem; }
+h3:not(.top) { margin-block-end: 0.5rem; margin-block-start: 2rem; }
 
 
 
@@ -98,7 +98,7 @@ h3:not(.top) { margin-block-end: 0.5rem; margin-block-start: 2.5rem; }
 /* 3.2 Page Breaks */
 .page-break { break-after: page; }
 h2:not(.no-break) { break-before: page; }
-h2 .no-break {margin-top: 4rem;}
+h2 .no-break {margin-block-start: 2rem;}
 
 /* 3.3 Page Numbers */
 @page { @bottom-right { content: counter(page); } }
