--- a/style.css
+++ b/style.css
@@ -60,10 +60,10 @@ html { font-family: 'Roboto', sans-serif; }
 h1 { border-bottom: 1px solid black; margin-bottom: 2rem; padding-bottom: 1rem; }
 h2 { border-bottom: 0.125rem solid black; margin-bottom: 1rem; padding-bottom: 0.5rem; }
 p {	text-align: justify; line-height: 1.4rem; }
-a { color: #347dbd; }
+a { color: blue; }
 a:hover { color: #FC814A; }
-mark { color: blue; background-color: inherit; }
-light-mark { color: blue; }
+mark { color: purple; background-color: inherit; }
+light-mark { color: purple; }
 img { max-width: calc(100% - 3rem); }
 .img-75mm { height: 75mm; }
 
@@ -98,7 +98,7 @@ h3:not(.top) { margin-block-end: 0.5rem; margin-block-start: 2rem; }
 /* 3.2 Page Breaks */
 .page-break { break-after: page; }
 h2:not(.no-break) { break-before: page; }
-h2 .no-break {margin-block-start: 2rem;}
+h2 .no-break { margin-block-start: 2rem; }
 
 /* 3.3 Page Numbers */
 @page { @bottom-right { content: counter(page); } }
