--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@ figcaption:not(.no-counter)::before {
 .footer { position: running(footerRunning); }
 .footer a { font-weight: bold;
 	text-decoration: none;
-	color: #445a75;}
+	color: #347dbd;}
 @page {
 	@bottom-left {
     	content: element(footerRunning); width: 80mm;
@@ -162,7 +162,7 @@ h3 { string-set: subsection content(text); }
 .cover-page h1 { border-bottom: 0.25rem solid white; }
 .cover-page h3 { font-weight: normal; }
 @page cover-page {
-    background-color: #445a75; color: white;
+    background-color: #347dbd; color: white;
     @top-right { content: none; }
     @bottom-left { content: none; }
     @bottom-right { content: none; }
