--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ html { font-family: 'Roboto', sans-serif; }
 h1 { border-bottom: 1px solid black; margin-bottom: 2rem; padding-bottom: 1rem; }
 h2 { border-bottom: 0.125rem solid black; margin-bottom: 1rem; padding-bottom: 0.5rem; }
 p {	text-align: justify; line-height: 1.4rem; }
-a { color: blue; }
+a { color: #347dbd; }
 a:hover { color: #FC814A; }
 mark { color: purple; background-color: inherit; }
 light-mark { color: purple; }
