--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ h3:not(.top) { margin-block-end: 0.5rem; margin-block-start: 2rem; }
 
 /* 3.2 Page Breaks */
 .page-break { break-after: page; }
-h2:not(.no-break) { break-before: page; }
+h2:not(.no-break) { break-before: page; margin-block-start: 0rem; }
 h2.no-break:not(.top) { margin-block-start: 3rem; }
 
 /* 3.3 Page Numbers */
