--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@ figcaption { caption-side: top; padding-bottom: 0.75rem;
 /* Personal note: #347dbd & #445a75 for blue and dark blue colors */
 
 h3:not(.top) { margin-block-end: 0.5rem; margin-block-start: 2rem; }
+h3.top { margin-block-start: 1.5rem; margin-block-end: 0.5rem; }
 
 
 
