--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ h3.top { margin-block-start: 1.5rem; margin-block-end: 0.5rem; }
 .page-break { break-after: page; }
 h2:not(.no-break) { break-before: page; margin-block-start: 0rem; }
 h2.no-break:not(.top) { margin-block-start: 3rem; }
+h2.top { margin-block-start: 0rem; }
 
 /* 3.3 Page Numbers */
 @page { @bottom-right { content: counter(page); } }
