--- a/style.css
+++ b/style.css
@@ -85,10 +85,6 @@ figcaption { caption-side: top; padding-bottom: 0.75rem;
 	border-bottom: 0.5px solid gray; margin-bottom: 1.5rem;
 	color: gray; font-weight: bold;} 
 
-/* Personal note: #347dbd & #445a75 for blue and dark blue colors */
-
-h3 { margin-block-end: 0.5rem; margin-block-start: 2rem; }
-
 
 
 /* - * - * - * - * - * - * - * - * - * - */
@@ -100,6 +96,9 @@ h3 { margin-block-end: 0.5rem; margin-block-start: 2rem; }
 h2:not(.no-break) { break-before: page; margin-block-start: 0rem; }
 h2.no-break:not(.top) { margin-block-start: 3rem; }
 h2.top { margin-block-start: 0rem; }
+
+h3:not(.top) {margin-block-start: 2rem; margin-block-end: 0.5rem;}
+h3.top { margin-block-start: 1rem; margin-block-end: 0.5rem; }
 
 /* 3.3 Page Numbers */
 @page { @bottom-right { content: counter(page); } }
