--- a/style.css
+++ b/style.css
@@ -271,14 +271,14 @@ ol, ul a {
 /* 5.3 Banners */
 .banner-class {	page: top-banner; }
 @page top-banner {
-	@top-left-corner { background-color: purple; content: " ";}
-	@top-left {	background-color: purple; content: " ";}
-	@top-center { background-color: purple; 
+	@top-left-corner { background-color: darkslateblue; content: " ";}
+	@top-left {	background-color: darkslateblue; content: " ";}
+	@top-center { background-color: darkslateblue; 
 		color: white;
 		content: "Sample Banner Text";
 	}
-	@top-right { background-color: purple;	content: " ";}
-	@top-right-corner { background-color: purple; content: " ";}
+	@top-right { background-color: darkslateblue;	content: " ";}
+	@top-right-corner { background-color: darkslateblue; content: " ";}
 }
 
 
