--- a/style.css
+++ b/style.css
@@ -93,9 +93,9 @@ figcaption { caption-side: top; padding-bottom: 0.75rem;
 
 /* 3.2 Page Breaks */
 .page-break { break-after: page; }
-h2:not(.no-break) { break-before: page; margin-block-start: 0rem; }
-h2.no-break:not(.top) { margin-block-start: 3rem; }
-h2.top { margin-block-start: 0rem; }
+h2:not(.no-break) { break-before: page; margin-block-start: 0rem; margin-block-end: 0.166rem; }
+h2.no-break:not(.top) { margin-block-start: 3rem; margin-block-end: 0.166rem;}
+h2.top { margin-block-start: 0rem; margin-block-end: 0.166rem; }
 
 h3:not(.top) {margin-block-start: 2.49rem; margin-block-end: 0.83rem;}
 h3.top { margin-block-start: 1.66rem; margin-block-end: 0.83rem; }
